feature: uppercase titles

--- a/3-column-preview-card-component-main/card.css
+++ b/3-column-preview-card-component-main/card.css
@@ -23,6 +23,7 @@ html{
     font-family: Big Shoulders Display;
     font-size: 150%;
     color:var(--white-text);
+    text-transform: uppercase;
 }
 
 
